assets/css/servicios.css
.servicios__cards {
   display: grid;
   gap: 1rem;
}

.servicios__card {
   background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: multiply;
   color: var(--color-blanco);
   border-radius: 1rem;
   padding: 0rem 1rem;

   background-size: 150%;
   background-position: center;
   background-repeat: no-repeat;
}

.servicios__card:nth-child(1) {
   background-image: url(../img/Gemini_coffee_maker.PNG);
}
.servicios__card:nth-child(2) {
   background-image: url(../img/Gemini_heart.PNG);
}
.servicios__card:nth-child(3) {
   background-image: url(../img/Gemini_laptops.PNG);
}

.servicios__card-header {
   display: flex;
   img {
      width: 30px;
      margin: 0;
   }
   justify-content: space-between;
}

.servicios__card-body {
   overflow: hidden;
   p {
      transform: translateY(200px);
   }
}

.servicios__card:hover {
   background-size: 170%;
   transition: background-size 1s ease-in-out;
   .servicios__card-body {
      p {
         transform: translateY(0px);
         transition: transform 1s ease-out;
      }
   }
}

.material-symbols-outlined {
   color: var(--color-azul);
}

@media (min-width: 800px) {
   .servicios__cards {
      grid-template-columns: repeat(3, 1fr);
   }
}

